--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,9 @@
 <section class="container">
   <h1>Signup Page</h1>
    <img style="height: 60px;" src="https://s40424.pcdn.co/in/wp-content/uploads/2022/03/What-is-project-management-Meaning-and-Definition-of-Project-Management-1.jpg">
-    <img style="height: 60px;" src="https://c8.alamy.com/comp/ECMD14/hand-pushing-virtual-security-button-on-digital-background-ECMD14.jpg">
+    <img style="height: 60px;" src="https://s40424.pcdn.co/in/wp-content/uploads/2022/03/What-is-project-management-Meaning-and-Definition-of-Project-Management-1.jpg">
      <img style="height: 60px;" src="https://s40424.pcdn.co/in/wp-content/uploads/2022/03/What-is-project-management-Meaning-and-Definition-of-Project-Management-1.jpg">
-     
+
        
      <span style="float: right;font-weight: bold;">
        Hello {{username}}
@@ -13,37 +13,13 @@
       </span>
 
    <hr/>
-     <h3>Selected Passport Details  :-</h3>
-         <table class="table table-bordered">
-<thead>
- <tr style="background-color: #35858b;color:white;">
-    <th>Name</th>
-   <th>Number</th>
-   <th>Address</th>
-   <th>Date of expiry</th>
-   <th>Photo</th>
-    <th>Delete</th>
- </tr>
-</thead>
-<tbody>
- <tr>
-   <td></td>
-   <td></td>
-           <td></td>
-               <td>
-               <b></b>
-               </td>
-                     <td><img src="" style="height: 40px;"></td>
-                        <td>
-                        <button type="button" class="btn btn-danger">Delete</button>
-                        <button type="button" class="btn btn-primary">EDIT</button>
-                        </td>
-           </tr>		
-</tbody>
-</table>
-  
+    <!--passportDetails -> this is parent property  
+       this is cpassport is child propery
 
-   <hr/>
+    --> 
+   <app-passport [passport]="passportDetails"></app-passport>
+
+
     <h3 style="background-color: #ffffe2;">Signup Data with Passport!</h3>
     <hr/>
      <b>Total Records</b> :  <span style="font-weight: bold;font-size: 16px;"> 
@@ -77,9 +53,8 @@
          <button type="button" class="btn btn-primary">Passport</button>
      </a>
       &nbsp;
-      <a href="#" *ngIf="signup.passportFlag==='yes'">
-            <button type="button" class="btn btn-success">More!</button>
-        </a>
+            <button *ngIf="signup.passportFlag==='yes'" 
+            (click)="showPassportDetails(signup.sid);"  type="button" class="btn btn-success">More!</button>
       
      </td>
  </tr>
