Show all the cards for the customer

--- a/src/app/credit/credit.component.html
+++ b/src/app/credit/credit.component.html
@@ -24,7 +24,8 @@
    	 <form>
    	 
       <input [(ngModel)]="creditCard.sid" type="hidden" name="sid" /> 
-   	 
+	  <input [(ngModel)]="creditCard.cid" type="hidden" name="cid" /> 
+
    	  <div style="width: 50%;margin-bottom: 15px;" class="form-group">
    		 <label>Name : </label>
    		 <input [(ngModel)]="creditCard.name" type="text" style="background-color: #fffff4;" readonly="readonly" name="name" class="form-control">
@@ -45,11 +46,7 @@
    	 </div>
    	 
    	   <div style="width: 50%;margin-bottom: 15px;" class="form-group">
-   		 <label>Card Name : </label>
-   		 <select [(ngModel)]="creditCard.cardName" name="cardName" class="form-control">
-   		     <option>TRAVEL CARD</option>
-   		     <option>SIGNATURE</option>
-   		 </select>
+   		 <label><b>Card Name : {{creditCard.cardName}}</b></label>
    	 </div>
    	 
    	 
@@ -60,7 +57,7 @@
    	 
    	 <div style="width: 40%;margin-bottom: 15px;" class="form-group">
    	 <label>Limit: </label>
-   	<select [(ngModel)]="creditCard.limit"  name="limit" class="form-control">
+   	<select [(ngModel)]="creditCard.climit"  name="limit" class="form-control">
    		     <option>1000$</option>
    		     <option>2000$</option>
    		     <option>3000$</option>
@@ -69,11 +66,22 @@
    		 </select>
    	 </div>
    	 
-   	 	 <div style="width: 50%;margin-top: 20px;">
+	 <hr/>
+   	 	
+	 
+	 <div style="width: 50%;margin-top: 20px;" [hidden]="!applyCard">
    	 <button (click) = "applyCreditCard();"  type="button" class="btn btn-primary">Apply For Card</button>
       &nbsp;
    	  <button type="reset" class="btn btn-danger">Clear</button>
    	 </div>
+
+		<div style="width: 50%;margin-top: 20px;" [hidden]="applyCard">
+			<button (click) = "updateCreditCardStatus('Approve');"  type="button" class="btn btn-success">Approve</button>
+		  &nbsp;
+			 <button (click) = "updateCreditCardStatus('Reject');"   type="button" class="btn btn-danger">Reject</button>
+			</div>
+		 
+
    	 </form>
    	 <hr/>
    	</section>
