--- a/src/app/add-passport/add-passport.component.html
+++ b/src/app/add-passport/add-passport.component.html
@@ -1,53 +1,54 @@
-<section class="container">
-    <h1>Passport Page</h1>
-     <img style="height: 160px;" src="https://cdn-icons-png.flaticon.com/512/235/235820.png">
-      <img style="height: 160px;" src="https://cdn-icons-png.flaticon.com/512/235/235820.png">
-       <img style="height: 160px;" src="https://cdn-icons-png.flaticon.com/512/235/235820.png">
-     <br/><br/>
+   
+   <section class="container">
+   	<h1>Passport Page</h1>
+   	 <img style="height: 160px;" src="https://cdn-icons-png.flaticon.com/512/235/235820.png">
+   	  <img style="height: 160px;" src="https://cdn-icons-png.flaticon.com/512/235/235820.png">
+   	   <img style="height: 160px;" src="https://cdn-icons-png.flaticon.com/512/235/235820.png">
+   	 <br/><br/>
+   	 
+   	 
+   	 <h1 style="color:green;">{{message}}{{passport.number}}</h1>
+   	 <form>
+   	 
+   	 <input [(ngModel)]="passport.sid"  type="hidden" name="sid" value="${param.sid}">
+   	 
+   	  
+   	 <div style="width: 50%;margin-bottom: 15px;" class="form-group">
+   		 <label>Name : </label>
+   		 <input [(ngModel)]="passport.name"  type="text" value="{{passport.name}}"  style="background-color: #fffff4;" readonly="readonly" name="name" class="form-control">
+   	 </div>
 
-
-     <h1 style="color:green;">{{message}}</h1>
-     <form>
-
-     <input type="hidden" name="sid" value="${param.sid}">
-
-
-     <div style="width: 50%;margin-bottom: 15px;" class="form-group">
-         <label>Name : </label>
-         <input type="text" value="{{passport.name}}"  style="background-color: #fffff4;" readonly="readonly" name="name" class="form-control">
-     </div>
-
-     <div style="width: 50%;margin-bottom: 15px;" class="form-group">
-         <label>Email : </label>
-         <input type="email" value="{{passport.email}}" style="background-color: #fffff4;" readonly="readonly" name="email" class="form-control">
-     </div>
-
-     <div style="width: 50%;margin-bottom: 15px;" class="form-group">
-         <label>Number : </label>
-         <input type="text" name="number" class="form-control">
-     </div>
-
-      <div style="width: 50%;margin-bottom: 15px;" class="form-group">
-         <label>Photo : </label>
-         <input type="text" name="photo" class="form-control">
-     </div>
-
-
-     <div style="width: 50%;margin-bottom: 15px;" class="form-group">
-     <label>Address : </label>
-     <input type="text" name="address" class="form-control">
-     </div>
-
-     <div style="width: 40%;margin-bottom: 15px;" class="form-group">
-     <label>Date of Expiry (dd-MM-yyyy): </label>
-     <input type="text" name="exp" class="form-control">
-     </div>
-
-          <div style="width: 50%;margin-top: 20px;">
-     <button type="submit" class="btn btn-primary">Add</button>
-   &nbsp;&nbsp;
-      <button type="reset" class="btn btn-danger">Clear</button>
-     </div>
-     </form>
-     <hr/>
-    </section>
+        <div style="width: 50%;margin-bottom: 15px;" class="form-group">
+   		 <label>Email : </label>
+   		 <input [(ngModel)]="passport.email" type="email" value="{{passport.email}}" style="background-color: #fffff4;" readonly="readonly" name="email" class="form-control">
+   	 </div>
+   	 
+   	 <div style="width: 50%;margin-bottom: 15px;" class="form-group">
+   		 <label>Number : </label>
+   		 <input [(ngModel)]="passport.number" type="text" name="number" class="form-control">
+   	 </div>
+   	 
+   	  <div style="width: 50%;margin-bottom: 15px;" class="form-group">
+   		 <label>Photo : </label>
+   		 <input [(ngModel)]="passport.photo" type="text" name="photo" class="form-control">
+   	 </div>
+   	 
+   	 
+   	 <div style="width: 50%;margin-bottom: 15px;" class="form-group">
+   	 <label>Address : </label>
+   	 <input [(ngModel)]="passport.address" type="text" name="address" class="form-control">
+   	 </div>
+   	 
+   	 <div style="width: 40%;margin-bottom: 15px;" class="form-group">
+   	 <label>Date of Expiry (dd-MM-yyyy): </label>
+   	 <input [(ngModel)]="passport.exp"  type="text" name="exp" class="form-control">
+   	 </div>
+   	 
+   	 	 <div style="width: 50%;margin-top: 20px;">
+   	 <button (click)="savePassport();"  type="button" class="btn btn-primary">Add Password</button>
+      &nbsp;&nbsp;
+   	  <button  type="reset" class="btn btn-danger">Clear</button>
+   	 </div>
+   	 </form>
+   	 <hr/>
+   	</section>
